--- a/snippets/create_campaign_targeting.mdx
+++ b/snippets/create_campaign_targeting.mdx
@@ -1,7 +1,7 @@
 ### Targeting Parameters
 
 <ParamField body="gender" type="string">
-	Gender targeting , values = `ALL`, `1` for male, `2` for female
+	Gender targeting , `1` for male, `2` for female, otherwise leave it empty
 </ParamField>
 
 <ParamField body="ages" type="object">
