--- a/api-reference/endpoint/meta/campaign/leads_standard.mdx
+++ b/api-reference/endpoint/meta/campaign/leads_standard.mdx
@@ -41,6 +41,15 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
 
 </ParamField>
 
+<ParamField body="primaryText" type="array">
+	<Note>Use this with carousel ads only</Note>
+	<Expandable title="Primary Text Array">
+		<ParamField body="text" type="string" required>
+			Main ad copy text
+		</ParamField>
+	</Expandable>
+</ParamField>
+
 <ParamField body="isDynamicCreative" type="boolean" >
 	Whether it's dynamic creative, useable with images/videos
 
@@ -60,6 +69,11 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
 
     	<ParamField body="callToAction" type="string" required>
     		Call to Action
+    	</ParamField>
+
+
+    	<ParamField body="primaryText" type="string" required>
+    		Primary Text
     	</ParamField>
 
     	<ParamField body="headline1" type="string">
