Enhance campaign documentation by adding supported call to action types across various endpoints, ensuring clarity on available options for each campaign type.

--- a/api-reference/endpoint/meta/campaign/boost_post.mdx
+++ b/api-reference/endpoint/meta/campaign/boost_post.mdx
@@ -57,7 +57,13 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
 </ParamField>
 
 <ParamField body="callToAction" type="string" required>
-	Call to Action, Supported Call to Action is `Send Message`
+	<Note>For `Facebook`, Supported Call to Action is `SEND_MESSAGE`</Note>
+	<Note>
+		For `Instagram`, Supported Call to Action is `LEARN_MORE`, `SHOP_NOW`,
+		`SIGN_UP`, `DOWNLOAD`, `WATCH_MORE`, `APPLY_NOW`, `SUBSCRIBE`,
+		`GET_QUOTE`, `CONTACT_US`, `ORDER_NOW`, `REQUEST_TIME`, `GET_SHOWTIMES`,
+		`LISTEN_NOW`, `SEE_MENU`, `BOOK_TRAVEL`
+	</Note>
 </ParamField>
 
 ## Response
