--- a/api-reference/endpoint/meta/campaign/engagement.mdx
+++ b/api-reference/endpoint/meta/campaign/engagement.mdx
@@ -109,6 +109,12 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
 
 </ParamField>
 
+<ParamField body="callToAction" type="string" required>
+	Supported call to action types are: `SEND_MESSAGE`, `BOOK_NOW`,
+	`CONTACT_US`, `GET_PROMOTIONS`, `GET_QUOTE`, `INQUIRE_NOW`, `LEARN_MORE`,
+	`SHOP_NOW`, `SIGN_UP`, `SUBSCRIBE`, `ORDER_NOW`, `APPLY_NOW`
+</ParamField>
+
 ## Response
 
 <CampaignResponse />
