--- a/api-reference/endpoint/meta/campaign/leads_dynamic.mdx
+++ b/api-reference/endpoint/meta/campaign/leads_dynamic.mdx
@@ -63,6 +63,11 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
 	Facebook Lead Form ID
 </ParamField>
 
+<ParamField body="callToAction" type="string" required>
+	Supported call to action types are `LEARN_MORE`, `SIGN_UP`, `DOWNLOAD`,
+	`APPLY_NOW`, `SUBSCRIBE`, `GET_QUOTE`, `BOOK_TRAVEL`
+</ParamField>
+
 ## Response
 
 <CampaignResponse />
