--- a/api-reference/endpoint/meta/campaign/sales_dynamic.mdx
+++ b/api-reference/endpoint/meta/campaign/sales_dynamic.mdx
@@ -69,6 +69,13 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
 	`OUTCOME_SALES` in campaignType to get the list of conversion goals.
 </ParamField>
 
+<ParamField body="callToAction" type="string" required>
+	Supported call to action types are: `LEARN_MORE`, `SHOP_NOW`, `SIGN_UP`,
+	`DOWNLOAD`, `WATCH_MORE`, `APPLY_NOW`, `SUBSCRIBE`, `GET_QUOTE`,
+	`CONTACT_US`, `ORDER_NOW`, `REQUEST_TIME`, `GET_SHOWTIMES`, `LISTEN_NOW`,
+	`SEE_MENU`, `BOOK_TRAVEL`
+</ParamField>
+
 ## Response
 
 <CampaignResponse />
