--- a/api-reference/endpoint/meta/campaign/traffic_standard.mdx
+++ b/api-reference/endpoint/meta/campaign/traffic_standard.mdx
@@ -101,7 +101,7 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
 
 </ParamField>
 
-<ParamField body="callToAction" type="string" required>
+<ParamField body="callToAction" type="string">
 	<Note>Use this with carousel ads only</Note>
 	Supported call to action types are `LEARN_MORE`, `SHOP_NOW`, `SIGN_UP`, `DOWNLOAD`,
 	`WATCH_MORE`, `APPLY_NOW`, `SUBSCRIBE`, `GET_QUOTE`, `CONTACT_US`, `ORDER_NOW`,
