--- a/api-reference/endpoint/meta/campaign/conversion_standard.mdx
+++ b/api-reference/endpoint/meta/campaign/conversion_standard.mdx
@@ -68,9 +68,10 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
     	</ParamField>
 
     	<ParamField body="callToAction" type="string" required>
-    		Call to Action
+    		Supported call to action types are `LEARN_MORE`, `SHOP_NOW`, `SIGN_UP`, `DOWNLOAD`,
+    		`WATCH_MORE`, `APPLY_NOW`, `SUBSCRIBE`, `GET_QUOTE`, `CONTACT_US`, `ORDER_NOW`,
+    		`REQUEST_TIME`, `GET_SHOWTIMES`, `LISTEN_NOW`, `SEE_MENU`, `BOOK_TRAVEL`
     	</ParamField>
-
 
     	<ParamField body="primaryText" type="string" required>
     		Primary Text
@@ -126,6 +127,13 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
 	Campaign conversion goal type, get the list of conversion goals from
 	[here](/api-reference/endpoint/meta/get_custom_conversions), use
 	`CONVERSIONS` in campaignType to get the list of conversion goals.
+</ParamField>
+
+<ParamField body="callToAction" type="string">
+	<Note>Use this with carousel ads only</Note>
+	Supported call to action types are `LEARN_MORE`, `SHOP_NOW`, `SIGN_UP`, `DOWNLOAD`,
+	`WATCH_MORE`, `APPLY_NOW`, `SUBSCRIBE`, `GET_QUOTE`, `CONTACT_US`, `ORDER_NOW`,
+	`REQUEST_TIME`, `GET_SHOWTIMES`, `LISTEN_NOW`, `SEE_MENU`, `BOOK_TRAVEL`
 </ParamField>
 
 ## Response
