--- a/api-reference/endpoint/meta/get_fb_page_media.mdx
+++ b/api-reference/endpoint/meta/get_fb_page_media.mdx
@@ -15,14 +15,8 @@ description: "This endpoint is used to fetch media assets (both images and video
 {/* <ParamField body="fbPageId" type="string" required>
 	Facebook Page ID
 </ParamField> */}
-<ParamField
-	body="type"
-	type="string"
-	default="IMAGE | VIDEO"
-	placeholder="IMAGE | VIDEO"
-	required
->
-	Media Type
+<ParamField body="type" type="string" required>
+	Media Type, Values: `IMAGE` or `VIDEO`
 </ParamField>
 <ParamField body="pagination" type="string" default="">
 	If the number of results exceeds the page limit, the response will include
