--- a/api-reference/endpoint/meta/get_targeting_systems_lookup.mdx
+++ b/api-reference/endpoint/meta/get_targeting_systems_lookup.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Get Targeting Systems"
+title: "Get Device Targeting"
 api: "POST /meta/get_targeting_systems_lookup"
-description: "This endpoint is used to get targeting systems lookup, like os and devices names."
+description: "This endpoint is used to get device targeting lookup, like os and devices names."
 ---
 
 ## Request Body
