--- a/api-reference/endpoint/meta/search_targeting_locations.mdx
+++ b/api-reference/endpoint/meta/search_targeting_locations.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Get Search Targeting Locations"
+title: "Search Targeting Locations"
 api: "POST /meta/search_targeting_locations"
-description: "This endpoint allows you to search for advertising target Locations based on search query. It helps in identifying relevant interest locations to improve the accuracy and effectiveness of ad targeting."
+description: "This endpoint allows you to search for advertising target Locations based on search query. It helps in identifying relevant locations to improve the accuracy and effectiveness of ad targeting."
 ---
 
 ## Request Body
