--- a/api-reference/endpoint/meta/update_campaign_status.mdx
+++ b/api-reference/endpoint/meta/update_campaign_status.mdx
@@ -21,7 +21,7 @@ description: "This endpoint is used to update campaign status."
 </ParamField>
 
 <ParamField body="status" type="string" required>
-	Status to update the campaign to.
+	Status to update the campaign to, values: `PAUSED` or `ACTIVE` or `DELETE`
 </ParamField>
 
 ## Response
